<resources>
    <string name="app_name">Gasosa</string>
    <string name="adicionar_entrada_activity_name">Nova Entrada</string>
    <string name="texto_data">Data</string>
    <string name="texto_preco">Preço</string>
    <string name="texto_litragem">Litros</string>
    <string name="texto_quilometragem">Km no Veículo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_botao_data">Data...</string>
    <string name="titulo_ok_nova_entrada">OK</string>
</resources>
