<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.olina.gasosa.AdicionarEntradaActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textoData"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:text="@string/texto_data"
        android:textSize="16sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/campoData"
        android:layout_width="116dp"
        android:layout_height="39dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/textoData"
        app:layout_constraintEnd_toStartOf="@+id/botaoData"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toEndOf="@+id/textoData" />

    <Button
        android:id="@+id/botaoData"
        android:layout_width="78dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/texto_botao_data"
        app:layout_constraintBaseline_toBaselineOf="@+id/campoData"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textoPreco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/texto_preco"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/campoPreco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoData" />

    <TextView
        android:id="@+id/textoLitragem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/texto_litragem"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/campoLitragem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoPreco" />

    <TextView
        android:id="@+id/textoQuilometragem"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/texto_quilometragem"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/campoQuilometragem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoLitragem" />

    <EditText
        android:id="@+id/campoPreco"
        android:layout_width="221dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textoPreco"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/campoLitragem"
        android:layout_width="219dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textoLitragem"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/campoQuilometragem"
        android:layout_width="219dp"
        android:layout_height="39dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textoQuilometragem"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
